# VisualDetectorOfSolidColorBall

./: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
atomic_configure/: setup.sh
catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_generated/installspace/: _setup_util.py  hikvision_rosConfig.cmake
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: hikvision_ros.pc
devel/share/hikvision_ros/cmake/: hikvision_rosConfig.cmake
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
include/: color.h  detect_params.h  detect_pipeline.h  hik_cam.h  kmeans_minibatch.h  params.h  seaskyline.h  shape.h
launch/: hik.launch
node/: hik_cam_node.cpp
src/: ADItest.cpp  color.cpp  colortest.cpp  detect_pipeline.cpp  hik_cam.cpp  kmeans_minibatch.cpp  localtest.cpp  seaskyline.cpp  shape.cpp  shapetest.cpp
